<resources>
    <string name="app_name">Calculadora PDM 2020 2</string>
    <string name="zero">0</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="soma">+</string>
    <string name="subtracao">-</string>
    <string name="multiplicacao">*</string>
    <string name="divisao">/</string>
    <string name="limpeza">C</string>
    <string name="resultado">=</string>
    <string name="pontoDecimal">.</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair">Sair</string>
    <string name="site_ifsp">Site IFSP</string>
    <string name="chamar_ifsp">Chamar IFSP</string>
    <string name="tipo_calculadora">Tipo calculadora</string>
    <string name="avancada">Avançada</string>
    <string name="basica">Básica</string>
    <string name="salvar">Salvar</string>
    <string name="raiz_quadrada">√</string>
    <string name="potenciacao">^</string>
</resources>