<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/visorTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:text="" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3">


        <Button
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/zero" />
        <Button
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/um" />
        <Button
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/dois" />
        <Button
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/tres" />
        <Button
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/quatro" />
        <Button
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/cinco" />
        <Button
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/seis" />
        <Button
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/sete" />
        <Button
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/oito" />
        <Button
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/nove" />

        <Button
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/soma" />
        <Button
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/subtracao" />
        <Button
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/multiplicacao" />
        <Button
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/divisao" />
        <Button
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/limpeza" />
        <Button
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/resultado" />
        <Button
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/pontoDecimal" />
    </GridLayout>

</LinearLayout>